welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:6: error: not found: value nbBiscuit
      nbBiscuit=nbBiscuit+1}
      ^Poucet:7: error: not found: value nbBiscuit
  		if (nbBiscuit==3){
                    ^Poucet:10: error: not found: value nbBiscuit
    	if (nbBiscuit==2){
            ^Poucet:11: error: not found: value g
      g	auche()
      ^